# simplicity

./: LICENSE  README.md  simplicity.cabal  stack.yaml
src/: BitMachine.hs  Simplicity.hs
