name:                simplicity
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Andreas Triantafyllos
maintainer:          andreas.triantafyllos@iohk.io
copyright:           (c) 2018 Andreas Triantafyllos
category:            Training
extra-source-files:  README.md
cabal-version:       >=1.10
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     Simplicity
                     , BitMachine
  build-depends:       base >= 4.7 && < 5
                     , mtl
  default-language:    Haskell2010
  ghc-options:         -Wall
